# pm_lab3

./: CMakeLists.txt  Doxyfile  timing_results.csv
docs/html/: _benchmark_8h.html  _benchmark_8h.js  _benchmark_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _modified_l_c_g_8cpp.html  _modified_l_c_g_8h.html  _modified_l_c_g_8h.js  _modified_l_c_g_8h_source.html  _modified_middle_square_8cpp.html  _modified_middle_square_8h.html  _modified_middle_square_8h.js  _modified_middle_square_8h_source.html  _modified_xor_shift_8cpp.html  _modified_xor_shift_8h.html  _modified_xor_shift_8h.js  _modified_xor_shift_8h_source.html  _random_tests_8cpp.html  _random_tests_8cpp.js  _random_tests_8h.html  _random_tests_8h.js  _random_tests_8h_source.html  _statistics_8cpp.html  _statistics_8cpp.js  _statistics_8h.html  _statistics_8h.js  _statistics_8h_source.html  _timer_8cpp.html  _timer_8h.html  _timer_8h_source.html  annotated.html  annotated_dup.js  apple-sdk_8c.html  apple-sdk_8cpp.html  class_modified_l_c_g-members.html  class_modified_l_c_g.html  class_modified_l_c_g.js  class_modified_middle_square-members.html  class_modified_middle_square.html  class_modified_middle_square.js  (+51 more)
docs/latex/: _benchmark_8h.tex  _benchmark_8h_source.tex  dirs.tex  (+52 more)
scripts/: plot_distribution.py  plot_timing.py
src/: Benchmark.h  ModifiedLCG.cpp  ModifiedLCG.h  ModifiedMiddleSquare.cpp  ModifiedMiddleSquare.h  ModifiedXorShift.cpp  ModifiedXorShift.h  RandomTests.cpp  RandomTests.h  RandomTests.tpp  Statistics.cpp  Statistics.h  Timer.cpp  Timer.h  main.cpp
(+46 files in other folders)
